# crussmap

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
data/: test.bed  test.chain
src/: bed.rs  core.rs  interval.rs  lib.rs  main.rs  parser.rs  utils.rs  view.rs
test/: test.chain  test.fa
